2007-01-15 Raphael Neider <rneider AT web.de>

	* doc/sdccman.lyx: updated PIC14/16 command line args, updated PIC14
	    code page and data banking description
	* src/pic/genarith.c,
	* src/pic/gen.h: removed bit arithmetic functions,
	    updated exit(1) to exit(EXIT_FAILURE)
	* device/lib/pic16/libsdcc/stack/stack.S: default to 256 byte stack
	* device/include/pic16/pic18f2455.h,
	* device/lib/pic16/libdev/pic18f2455.c: added PORTD, LATD, LATE,
	    TRISD and TRISE, fixed/added some bit names
	* device/lib/pic16/libdev/pic18f{2550,4550,4455}.c,
	* device/include/pic16/pic18f{2550,4550,4455}.h: simply include
	    updated pic18f2455.{c,h} instead of duplicating them

2007-01-14 Borut Razem <borut.razem AT siol.net>

	* as/mcs51/asnoice.c, as/hc08/asnoice.c: fixed bug #1447412:
	  Cannot debug files that contain spaces in the path name
	  by converting spaces in asm file name to underscores

2007-01-13 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: fixed format errors

2007-01-10 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.lex, src/SDCCmain.c: fixed bug #1631895:
	  codeseg/constseg #pragma fail
	* suppoprt/cpp2/Makefile.bcc: reenable Borland C compilation
	* suppoprt/cpp2/configure.in, suppoprt/cpp2/libcpp/lex.c,
	  suppoprt/cpp2/Makefile.in, suppoprt/cpp2/sdcpp-opts,
	  suppoprt/cpp2/sdcpp.[ch]: house cleaning

2007-01-09 Borut Razem <borut.razem AT siol.net>

	* get rid of diagnistic.[ch], pretty-print.[ch],
	  c-pretty-print.[ch], ... used just for error, warning, ...
	  message formatting
	* suppoprt/cpp2/pretty-print.[ch], suppoprt/cpp2/diagnostic.[ch],
	  suppoprt/cpp2/diagnostic.def, suppoprt/cpp2/input.h,
	  suppoprt/cpp2/pretty-print.[ch]:
	  removed
	* suppoprt/cpp2/Makefile.in, suppoprt/cpp2/opts.c,
	  suppoprt/cpp2/sdcpp-opts.c, suppoprt/cpp2/sdcpp.[ch],
	  suppoprt/cpp2/sdcpp.dsp:
	  changed

2007-01-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/printf_large.c (output_float): removed recursion,