@@ -1,3 +1,9 @@
+2007-01-15 Borut Razem <borut.razem AT siol.net>
+
+	* src/pic16/ralloc.c, src/pic/ralloc.c, src/SDCC.y:
+	  removed terminal symbol ELIPSIS, since it was never generated by the
+	  lexer and it was wrongly used in parameter_identifier_list rule
+
 2007-01-15 Raphael Neider <rneider AT web.de>
 
 	* doc/sdccman.lyx: updated PIC14/16 command line args, updated PIC14
